--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "fzaninotto/faker": "^1.4",
         "infyomlabs/swagger-generator": "dev-master",
         "jlapp/swaggervel": "dev-master",
+        "laravel/telescope": "^0.1.6",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^2.0",
         "phpunit/phpunit": "^7.0"
