--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "devDependencies": {
         "axios": "^0.18",
         "babel-preset-react": "^6.23.0",
-        "bootstrap": "^4.0.0",
+        "bootstrap": "^4.1.3",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^2.0",
@@ -22,6 +22,8 @@
         "react-dom": "^16.2.0"
     },
     "dependencies": {
-        "laravel-echo": "^1.4.1"
+        "laravel-echo": "^1.4.1",
+        "react-router": "^4.3.1",
+        "react-router-dom": "^4.3.1"
     }
 }
