chore: update dependencies; - add babel presets; - add webpack browsersync; - add react-spinners & prop-types; - add babelrc;

--- a/.babelrc
+++ b/.babelrc
@@ -15,7 +15,8 @@
   ],
   "plugins": [
     [
-      "babel-plugin-transform-class-properties"
+      "babel-plugin-transform-class-properties",
+      "emotion"
     ]
   ]
 }
